Dashboard responsiveness